kubernetes/main/apps/office/cryptpad/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cryptpad
  namespace: office
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cryptpad
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "3003"
              protocol: TCP
